// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls should renderWithTheme correctly: __main__ 1`] = `
<div>
  <div
    class="mantine-1mo5lls"
  >
    <button
      class="mantine-8mgm8e"
      data-cy="btn-play"
      data-testid="btn-play"
      disabled=""
      title="Server is offline"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 9 11"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 4.63397C9.16667 5.01887 9.16667 5.98113 8.5 6.36603L1.75 10.2631C1.08333 10.648 0.25 10.1669 0.25 9.39711L0.25 1.60289C0.25 0.833085 1.08333 0.35196 1.75 0.73686L8.5 4.63397Z"
          fill="#99f5ff"
        />
      </svg>
      <span>
        Play
      </span>
    </button>
    <div>
      Dropdown
    </div>
    <div>
      KeyboardShortcutModal
    </div>
  </div>
  ,
</div>
`;

exports[`Controls should show the Edit button when active tab is 'panel': __switch_btn__ 1`] = `
<div>
  <div
    class="mantine-1mo5lls"
  >
    <button
      class="mantine-8mgm8e"
      data-cy="btn-play"
      data-testid="btn-play"
      disabled=""
      title="Server is offline"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 9 11"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 4.63397C9.16667 5.01887 9.16667 5.98113 8.5 6.36603L1.75 10.2631C1.08333 10.648 0.25 10.1669 0.25 9.39711L0.25 1.60289C0.25 0.833085 1.08333 0.35196 1.75 0.73686L8.5 4.63397Z"
          fill="#99f5ff"
        />
      </svg>
      <span>
        Play
      </span>
    </button>
    <div>
      Dropdown
    </div>
    <div
      class="mantine-15fjqzh"
    >
      <div
        class="mantine-Text-root mantine-1gamrgd"
        data-cy="operation-switch"
        data-testid="operation-switch"
      >
        Edit
      </div>
      <div
        data-testid="react-switch"
      />
    </div>
    <div>
      KeyboardShortcutModal
    </div>
  </div>
  ,
</div>
`;
